# Terraforge

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: azure-static-web-apps-nice-moss-0e86d840f.yml
server/: app.py  pyproject.toml  requirements.txt
src/: App.tsx  Router.tsx  main.tsx  polyfill.js
src/components/errors/: ErrorBoundary.tsx
src/components/layouts/: Footer.tsx  Header.tsx
src/components/playground/: ChatOutput.tsx  DarkModeContext.tsx  MarkdownRenderer.tsx  code-viewer.tsx  maxlength-selector.tsx  message-actions.tsx  model-selector.tsx  page.tsx  preset-actions.tsx  preset-save.tsx  preset-selector.tsx  preset-share.tsx  temperature-selector.tsx  top-p-selector.tsx
src/components/playground/data/: models.ts
src/config/: app.ts  menu.ts
src/pages/: Dashboard.tsx  DataCleanRoom.tsx  Documentation.tsx  Examples.tsx  Integrations.tsx
