[tool.poetry]
name = "perplexed"
version = "0.1.0"
description = "This is a user interface tool for LLM processes"
authors = ["Sebastian Hansen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ollama = "^0.1.8"
pandas = "^2.2.2"
chromadb = "^0.4.24"
numpy = "^1.26.4"
flask = "^3.0.3"
flask-cors = "^4.0.1"
requests = ">=2.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
